manifests/00_whoami_pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: whoami-pod
spec:
  containers:
  - name: whoami
    image: containous/whoami:v1.5.0
    ports:
      - name: web
        containerPort: 80
