manifests/02_mariadb_deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mariadb

spec:
  ports:
    - protocol: TCP
      name: sql
      port: 3306
  selector:
    app: mariadb

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: mariadb
  labels:
    app: mariadb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6.1
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
          ports:
            - name: sql
              containerPort: 3306
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mariadb-pvc
